--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: archive
 title: "Talks and presentations"
 permalink: /talks/
@@ -9,8 +9,4 @@ author_profile: true
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+{% endif %} -->
